--- a/client/src/pages/tirutsavaLegacy/stats.css
+++ b/client/src/pages/tirutsavaLegacy/stats.css
@@ -110,4 +110,11 @@
     -webkit-text-fill-color: transparent;
    
   }
+
+  @media(max-width:505px){
+    .events .events-heading p{
+      font-size: 20px;
+    }
+  }
+  
   
