--- a/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
+++ b/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
@@ -1,5 +1,111 @@
 .tirutsavaLegacy{
-    background-color: black;
-    width:100%;
-    height:100vh;
+    overflow:hidden;
+    height: 90vh;
+
 }
+
+.hide{
+    position: relative;
+    animation-name:example;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.hometostats{
+    position: relative;
+    animation-name:example;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.statstohome{
+    position: relative;
+    animation-name:example;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.hidemovie{
+    position: relative;
+    animation-name:example1;
+    animation-duration: 2s;
+     bottom: -90vh;
+}
+
+.hidestats{
+    position: relative;
+    animation-name:example1;
+    animation-duration: 2s;
+     bottom: -90vh;
+}
+
+.statsTohome{
+    position: relative;
+    animation-name:example;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.movietohome{
+    position: relative;
+    animation-name:example1;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.statstomovie{
+    position: relative;
+    animation-name:example1;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.hometomovie{
+    position: relative;
+    animation-name:example;
+    animation-duration: 2s; 
+    bottom: -90vh;
+    
+}
+
+.showstats{
+ position: absolute;
+ top:10vh;
+ width: 100%;
+}
+
+.showhome{
+ position: absolute;
+ top:10vh;
+ width: 100%;
+}
+
+.showmovie{
+ position: absolute;
+ top:10vh;
+ width: 100%;
+}
+
+@keyframes example {
+    0%   {  bottom:0vh;}
+    25%  {  bottom:50vh;}
+    50%  {  bottom:70vh;}
+    75%  { bottom:80vh;}
+    100% {  bottom:90vh;}
+  }
+
+@keyframes example1 {
+    0%   {  bottom:90vh;}
+    25%  {  bottom:80vh;}
+    50%  {  bottom:70vh;}
+    75%  { bottom:50vh;}
+    100% {  bottom:0vh;}
+  }
+
+
