--- a/client/src/pages/tirutsavaLegacy/Movieafter.css
+++ b/client/src/pages/tirutsavaLegacy/Movieafter.css
@@ -7,9 +7,8 @@
     position: relative;
     top:50px;
     left:50px;
-      width:600px;
-      height: 600px;
-      margin: auto;
+      width:400px;
+      height: 400px;
       border-radius:10px;
       padding: 25px;
       background:linear-gradient(0deg,#000,#262626);
@@ -70,5 +69,13 @@
       right:0;
       top:50%;
       z-index: 10000000;
+    }
+
+    .after-gallery{
+      border:2px solid red;
+      position: absolute;
+      top:10vh;
+
+    
     }
     
