--- a/client/src/pages/tirutsavaLegacy/Movieafter.css
+++ b/client/src/pages/tirutsavaLegacy/Movieafter.css
@@ -1,81 +1,78 @@
-.movie-after-whole{
-  background-color: rgb(30,21,52);
-  height: 90vh;
-
+.movie-after-whole {
+  background-color: rgb(30, 21, 52);
 }
-.video-box{
-    position: relative;
-    top:50px;
-    left:50px;
-      width:400px;
-      height: 400px;
-      border-radius:10px;
-      padding: 25px;
-      background:linear-gradient(0deg,#000,#262626);
-      box-shadow: 0 0 10px #262626,
-      0 0 10px #262626,
-      0 0 10px #262626,
-      0 0 10px #262626;
-    border-radius: 27px;
-    border:2px solid rgb(106,90,205);
-    }
-    
-    .video-heading{
-      position: relative;
-      bottom: 14%;
-      font-size: 25px;
-      text-align: center;
-      font-weight: 600;
-      background: linear-gradient(45deg, #f3ec78, #af4261);
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-transform: uppercase;
-    }
-    
-    .video-icon{
-      width:fit-content;
-      margin: auto;
-      position: relative;
-      bottom:15%;
-      z-index:1000;
-      background:linear-gradient(0deg,#000,#262626);
-      box-shadow: 0 0 10px #262626,
-      0 0 10px #262626,
-      0 0 10px #262626,
-      0 0 10px #262626;
-    border-radius: 27px;
-    border:2px solid rgb(106,90,205);
-    
-      border-radius: 50%;
-    }
-    
-    .bi-youtube{
-      border:2px solid rgb(106,90,205);
-      width:70px;
-      height: 70px;
-      border-radius: 50%;
-      font-size: 10px;
-      padding: 10px;
-    }
-    
-    
-    .bi-youtube path{
-      font-size: 10px;
-      color: red;
-    }
+.video-box {
+  position: relative;
+  left: 8rem;
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+  padding: 25px;
+  background: linear-gradient(0deg, #000, #262626);
+  box-shadow: 0 0 10px #262626, 0 0 10px #262626, 0 0 10px #262626,
+    0 0 10px #262626;
+  border-radius: 27px;
+  border: 2px solid rgb(106, 90, 205);
+}
 
-    .inmovie-button{
-      position: absolute;
-      right:0;
-      top:50%;
-      z-index: 10000000;
-    }
+.video-heading {
+  position: relative;
+  bottom: 14%;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 600;
+  background: linear-gradient(45deg, #f3ec78, #af4261);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-transform: uppercase;
+}
 
-    .after-gallery{
-      border:2px solid red;
-      position: absolute;
-      top:10vh;
+.video-icon {
+  width: fit-content;
+  margin: auto;
+  position: relative;
+  bottom: 15%;
+  z-index: 1000;
+  background: linear-gradient(0deg, #000, #262626);
+  box-shadow: 0 0 10px #262626, 0 0 10px #262626, 0 0 10px #262626,
+    0 0 10px #262626;
+  border-radius: 27px;
+  border: 2px solid rgb(106, 90, 205);
 
-    
-    }
-    
+  border-radius: 50%;
+}
+
+.bi-youtube {
+  border: 2px solid rgb(106, 90, 205);
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  font-size: 10px;
+  padding: 10px;
+}
+
+.bi-youtube path {
+  font-size: 10px;
+  color: red;
+}
+
+.inmovie-button {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  z-index: 10000000;
+}
+
+.after-gallery {
+  border: 2px solid red;
+  position: absolute;
+  top: 10vh;
+}
+
+@media only screen and (max-width: 600px) {
+  .video-box {
+    left: 0.25rem;
+    width: 100%;
+    height: 300px;
+  }
+}
