--- a/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
+++ b/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
@@ -1,116 +1,120 @@
-.tirutsavaLegacy{
-    overflow:hidden;
-    height: 90vh;
-    width: 100%;
-    display: flex;
+.tirutsavaLegacy {
+  overflow: hidden;
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  background: #1e1534;
 }
 
-.legacy-90{
-    width: 95%;
-    height: 100%;
+.legacy-90 {
+  width: 95%;
+  height: 100%;
 }
 
-.hide{
-    display: none;
+.hide {
+  display: none;
 }
 
-.legacy-10{
-    width: 5%;
-    height: 100%;
-    background-color: rgb(30,21,52);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10000000;
+.legacy-10 {
+  width: 5%;
+  height: 100%;
+  background-color: rgb(30, 21, 52);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000000;
 }
 
-
-.hide2020{
-    position: relative;
-    animation-name:example;
-    animation-duration: 2s; 
-    bottom: -90vh;
-    transition:ease-out;
-    
+.hide2020 {
+  position: relative;
+  animation-name: example;
+  animation-duration: 2s;
+  bottom: -90vh;
+  transition: ease-out;
 }
-.hide2019{
-    position: relative;
-    animation-name:example;
-    animation-duration: 2s; 
-    bottom: -90vh;
-    
+.hide2019 {
+  position: relative;
+  animation-name: example;
+  animation-duration: 2s;
+  bottom: -90vh;
 }
-.hide2018{
-    position: relative;
-    animation-name:example;
-    animation-duration: 2s; 
-    bottom: -90vh;
-    
+.hide2018 {
+  position: relative;
+  animation-name: example;
+  animation-duration: 2s;
+  bottom: -90vh;
 }
-.hide2017{
-    position: relative;
-    animation-name:example;
-    animation-duration: 2s; 
-    bottom: -90vh;
-    
+.hide2017 {
+  position: relative;
+  animation-name: example;
+  animation-duration: 2s;
+  bottom: -90vh;
 }
-.hide2016{
-    position: relative;
-    animation-name:example;
-    animation-duration: 2s; 
-    bottom: -90vh;
-    
+.hide2016 {
+  position: relative;
+  animation-name: example;
+  animation-duration: 2s;
+  bottom: -90vh;
 }
 
-
-.show2020{
- position: absolute;
- top:10vh;
- width: 95%;
- border: 2px solid red;
+.show2020 {
+  position: absolute;
+  top: 10vh;
+  width: 95%;
+  border: 2px solid red;
 }
 
-.show2019{
-    position: absolute;
-    top:10vh;
-    width: 95%;
-    border: 2px solid red;
-   }
-   
-
-.show2018{
- position: absolute;
- top:10vh;
- width: 95%;
- border: 2px solid red;
+.show2019 {
+  position: absolute;
+  top: 10vh;
+  width: 95%;
+  border: 2px solid red;
 }
 
-.show2017{
- position: absolute;
- top:10vh;
- width: 95%;
- border: 2px solid red;
+.show2018 {
+  position: absolute;
+  top: 10vh;
+  width: 95%;
+  border: 2px solid red;
 }
 
-.show2016{
- position: absolute;
- top:10vh;
- width: 95%;
- border: 2px solid red;
+.show2017 {
+  position: absolute;
+  top: 10vh;
+  width: 95%;
+  border: 2px solid red;
 }
 
+.show2016 {
+  position: absolute;
+  top: 10vh;
+  width: 95%;
+  border: 2px solid red;
+}
 
 @keyframes example {
-    0%   {  bottom:10vh;}
-    100% {  bottom:90vh;}
+  0% {
+    bottom: 10vh;
   }
+  100% {
+    bottom: 90vh;
+  }
+}
 
 @keyframes example1 {
-    0%   {  bottom:90vh;}
-    25%  {  bottom:80vh;}
-    50%  {  bottom:70vh;}
-    75%  { bottom:50vh;}
-    100% {  bottom:0vh;}
+  0% {
+    bottom: 90vh;
   }
-
-
+  25% {
+    bottom: 80vh;
+  }
+  50% {
+    bottom: 70vh;
+  }
+  75% {
+    bottom: 50vh;
+  }
+  100% {
+    bottom: 0vh;
+  }
+}
