--- a/client/src/pages/tirutsavaLegacy/Year2020.css
+++ b/client/src/pages/tirutsavaLegacy/Year2020.css
@@ -1,7 +1,22 @@
-.Year-2020-whole{
-    width:100%;
-    height:90vh;
-    border:2px solid red;
-    background-color: rgb(30,21,52);
-    color:white;
+.stats {
+  text-align: center;
+  background: pink;
+  height: 10rem;
+  margin-top: 15rem;
+}
+
+.movieAfter {
+  text-align: center;
+  height: 20rem;
+  align-items: center;
+  align-self: center;
+  margin-top: 4rem;
+}
+
+.pics {
+  text-align: center;
+  align-self: center;
+  align-items: center;
+  height: 20rem;
+  margin-top: 3rem;
 }
