--- a/client/src/pages/tirutsavaLegacy/gallery/Deck.css
+++ b/client/src/pages/tirutsavaLegacy/gallery/Deck.css
@@ -1,40 +1,14 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  overscroll-behavior-y: contain;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  user-select: none;
-  font-family: Raleway, sans-serif;
-  position: fixed;
-  overflow: hidden;
-}
-
-.deck {
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
-      39 39,
-    auto;
-}
-
 .deck > div {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 50vw;
+  height: 50vh;
   will-change: transform;
   display: flex;
   align-items: left;
   justify-content: left;
+  padding-top: 1rem;
 
-  margin-left: 20%;
+  padding-left: 35%;
 }
 
 .deck > div > div {
