--- a/client/src/pages/tirutsavaLegacy/Hamburger.css
+++ b/client/src/pages/tirutsavaLegacy/Hamburger.css
@@ -39,7 +39,7 @@
     width:25px;
     border-radius: 27px;
     height:5px;
-    background: white;
+    background-image:  linear-gradient(45deg, #f3ec78, #af4261);
     position: relative;
     bottom:9px;
 }
@@ -73,7 +73,7 @@
     width:40px;
     border-radius: 27px;
     height:5px;
-    background: pink;
+    background: white;
     position: relative;
     bottom:9px;
 }
