--- a/client/src/pages/tirutsavaLegacy/Movieafter.css
+++ b/client/src/pages/tirutsavaLegacy/Movieafter.css
@@ -1,11 +1,12 @@
 .movie-after-whole {
   background-color: rgb(30, 21, 52);
+  height: 80%;
+  width:90%;
 }
 .video-box {
-  position: relative;
-  left: 8rem;
-  width: 600px;
-  height: 400px;
+  width:100%;
+  border: 2px solid red;
+  height: 100%;
   border-radius: 10px;
   padding: 25px;
   background: linear-gradient(0deg, #000, #262626);
@@ -61,12 +62,6 @@
   right: 0;
   top: 50%;
   z-index: 10000000;
-}
-
-.after-gallery {
-  border: 2px solid red;
-  position: absolute;
-  top: 10vh;
 }
 
 @media only screen and (max-width: 600px) {
