--- a/client/src/pages/tirutsavaLegacy/Year2020.css
+++ b/client/src/pages/tirutsavaLegacy/Year2020.css
@@ -1,26 +1,44 @@
-.Year2020 {
-  background: #1e1534;
+.Year2020{
+  height:89vh;
+  
 }
 
-.stats {
+.year-head{
+  height: 10%;
+  width:100%;
+  color: white;
+  background: linear-gradient(45deg, #f3ec78, #af4261);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+ letter-spacing: 5px;
+  font-size: 35px;
+  font-weight: 700;
   text-align: center;
-  background: pink;
-  height: 10rem;
-  margin-top: 15rem;
 }
 
-.movieAfter {
-  text-align: center;
-  height: 20rem;
+.year-cont{
+  height:80%;
+  width: 100%;
+}
+
+.stats-foot{
+  height: 10%;
+  width:100%;
+}
+
+.movie-cont{
+  width:100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  align-self: center;
-  margin-top: 4rem;
 }
 
-.pics {
-  text-align: center;
-  align-self: center;
+.gallery-cont{
+  width:100%;
+  height: 100%;
+ 
+  display: flex;
+  justify-content: center;
   align-items: center;
-  height: 20rem;
-  margin-top: 3rem;
 }
