--- a/client/src/pages/tirutsavaLegacy/Movieafter.css
+++ b/client/src/pages/tirutsavaLegacy/Movieafter.css
@@ -64,10 +64,8 @@
   z-index: 10000000;
 }
 
-@media only screen and (max-width: 600px) {
-  .video-box {
-    left: 0.25rem;
-    width: 100%;
-    height: 300px;
-  }
+@media(max-width: 768px) {
+.movie-after-whole{
+  margin: auto;
+}
 }
