--- a/client/src/pages/tirutsavaLegacy/Newgallery.css
+++ b/client/src/pages/tirutsavaLegacy/Newgallery.css
@@ -1,12 +1,30 @@
 .newgallery{
     width:90%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .gallery-img{
     width:100%;
-
+    height: 400px;
+    border:2px solid black;
     margin:auto;
+}
+
+.gallery-img img{
+    width:100%;
+    height: 100%;
+}
+
+@media(max-width:768px){
+    .gallery-img{
+        height: fit-content;
+    }
+
+    .newgallery{
+        height: fit-content;
+    }
 }
