--- a/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
+++ b/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
@@ -95,6 +95,10 @@
   
 }
 
+.mobile-view{
+  display: none;
+}
+
 @keyframes example {
   0% {
     bottom: 10vh;
@@ -120,6 +124,32 @@
   100% {
     bottom: 0vh;
   }
+}
+
+@media(max-width:768px){
+  .legacy-10{
+    display: none;
+  }
+
+  .large-width-view{
+    display: none;
+  }
+
+  .mobile-view{
+    display: block;
+    border:2px solid red;
+    width:100%;
+    height: 100%;
+  }
+
+  .legacy-90{
+    width:100%;
+    border:2px solid yellow;
+  }
+
+  .tirutsavaLegacy{
+    height: 180vh;
+}
 }
 
 
