--- a/client/src/pages/tirutsavaLegacy/Movieafter.css
+++ b/client/src/pages/tirutsavaLegacy/Movieafter.css
@@ -1,11 +1,10 @@
 .movie-after-whole {
   background-color: rgb(30, 21, 52);
-  height: 80%;
+  height: 400px;
   width:90%;
 }
 .video-box {
   width:100%;
-  border: 2px solid red;
   height: 100%;
   border-radius: 10px;
   padding: 25px;
@@ -66,6 +65,27 @@
 
 @media(max-width: 768px) {
 .movie-after-whole{
-  margin: auto;
+height: 80%;
 }
+
+.video-icon{
+  position: relative;
+  bottom:25%;
+}
+
+.video-heading{
+  position: relative;
+  bottom:25%;
+}
+
+}
+
+@media(max-height:667px){
+  .video-icon{
+   display: none;
+  }
+
+  .video-heading{
+    display: none;
+  }
 }
