--- a/client/src/pages/tirutsavaLegacy/Newgallery.css
+++ b/client/src/pages/tirutsavaLegacy/Newgallery.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .newgallery{
     width:90%;
     height: 100%;
@@ -9,37 +8,45 @@
 }
 
 .gallery-img{
+    width:fit-content;
+    height:400px;
+}
+.autoplay{
     width:100%;
-    height: 400px;
-    border:2px solid black;
-    margin:auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .gallery-img img{
     width:100%;
-    height: 100%;
+    height:100%;
 }
+
+.new-gallery-cont{
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:0;
+}
+
 
 @media(max-width:768px){
-    .gallery-img{
-        height: fit-content;
-    }
-
     .newgallery{
-        height: fit-content;
+        height: 100%;
+        margin: auto;
     }
-}
-=======
-.newgallery {
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.gallery-img {
-  width: 100%;
+    .gallery-img{
+        height: 380px;
+    }
 
-  margin: auto;
+    .gallery-img img{
+        width:100%;
+        height: 100%;
+    }
+
 }
->>>>>>> f604dca9feb4fd729fa53400f839665d8780f845
