--- a/client/src/pages/tirutsavaLegacy/newmobileview/Year2018mobile.css
+++ b/client/src/pages/tirutsavaLegacy/newmobileview/Year2018mobile.css
@@ -1,6 +1,7 @@
 .year-2018-mobile{
     width:100%;
-    height: 100%;
+    height: 150vh;
     color: white;
-    background-color: black;
+    background-color: #1e1534;
+    padding: 0;
 }
