--- a/client/src/pages/ContactUs/ContactUs.css
+++ b/client/src/pages/ContactUs/ContactUs.css
@@ -13,6 +13,7 @@
 
 .team-name-ContactUs{
     background-color: rgb(30, 21, 52);
+    display: block;
     color: white;
     font-size: 1.7vw;
     border: none;
@@ -20,21 +21,26 @@
     padding-left:  7vw;
     font-family: 'Maven Pro', sans-serif;
     padding-right: 10vw;
+    margin: 1.5% 0;
+    text-align: start;
+   
     text-shadow: 5px 5px 5px rgba(0,0,0,.5);
     
 }
-
-.scroll-spy-ContactUs a:hover{
-    /* color: #3BB5D3; */
+/* a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover{
+    color: #3BB5D3;
     text-shadow: 5px 5px 5px rgba(0,0,0,.5);
+} */
+.scroll-spy-ContactUs a:hover{
+    color: #3BB5D3 !important;
 }
 
 .active-ContactUs{
-    color: #FE9A2B;
+    color: #FE9A2B !important;;
 }
 
 .active-ContactUs:hover {
-    color: #FE9A2B;
+    color: #FE9A2B !important;;
     
   }
 
