--- a/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
+++ b/client/src/pages/tirutsavaLegacy/TirutsavaLegacy.css
@@ -3,7 +3,6 @@
   height: 90vh;
   width: 100%;
   display: flex;
-  background: #1e1534;
 }
 
 .legacy-90 {
@@ -12,7 +11,6 @@
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #1e1534;
 }
 
 .hide {
@@ -22,7 +20,6 @@
 .legacy-10 {
   width: 5%;
   height: 100%;
-  background-color: rgb(30, 21, 52);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,21 +62,18 @@
   position: absolute;
   top: 10vh;
   width: 95%;
- 
 }
 
 .show2019 {
   position: absolute;
   top: 10vh;
   width: 95%;
-
 }
 
 .show2018 {
   position: absolute;
   top: 10vh;
   width: 95%;
-
 }
 
 .show2017 {
@@ -92,11 +86,24 @@
   position: absolute;
   top: 10vh;
   width: 95%;
-  
 }
 
-.mobile-view{
+.mobile-view {
   display: none;
+}
+
+.tirutsavaLegacy.night-mode {
+  background: #1e1534;
+}
+.legacy-10.night-mode {
+  background-color: #1e1534;
+}
+
+.tirutsavaLegacy.day-mode {
+  background: #26e0fc;
+}
+.legacy-10.day-mode {
+  background-color: #26e0fc;
 }
 
 @keyframes example {
@@ -126,28 +133,26 @@
   }
 }
 
-@media(max-width:768px){
-  .legacy-10{
+@media (max-width: 768px) {
+  .legacy-10 {
     display: none;
   }
 
-  .large-width-view{
+  .large-width-view {
     display: none;
   }
 
-  .mobile-view{
+  .mobile-view {
     display: block;
-    width:100%;
+    width: 100%;
     height: 100%;
   }
 
-  .legacy-90{
-    width:100%;
+  .legacy-90 {
+    width: 100%;
   }
 
-  .tirutsavaLegacy{
+  .tirutsavaLegacy {
     height: 150vh;
+  }
 }
-}
-
-
