--- a/client/src/pages/tirutsavaLegacy/Year2020.css
+++ b/client/src/pages/tirutsavaLegacy/Year2020.css
@@ -1,73 +1,78 @@
-.Year2020{
-  height:89vh;
-  
+.Year2020 {
+  height: 89vh;
 }
 
-.year-head{
+.year-head {
   height: 10%;
-  width:100%;
+  width: 100%;
   color: white;
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.head-line{
-  width:30%;
+.head-line {
+  width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.line-color{
-  width:70%;
+.line-color {
+  width: 70%;
   position: relative;
-  bottom:4px;
+  bottom: 4px;
   height: 3px;
-background-color: rgb(178,34,34);
+  background-color: #df42b1;
 }
 
-.head-name{
+.line-color.day-mode {
+  background-color: #df42b1;
+}
+
+.head-name {
   background: linear-gradient(45deg, #f3ec78, #af4261);
   background-clip: text;
   -webkit-text-fill-color: transparent;
- letter-spacing: 5px;
+  letter-spacing: 5px;
   font-size: 35px;
   font-weight: 700;
   text-align: center;
 }
 
-.year-cont{
-  height:80%;
+.head-name.day-mode {
+  background: linear-gradient(45deg, #df42b1, #1e1534);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.year-cont {
+  height: 80%;
   width: 100%;
 }
 
-.stats-foot{
+.stats-foot {
   height: 10%;
-  width:100%;
+  width: 100%;
 }
 
-.movie-cont{
-  width:100%;
+.movie-cont {
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.gallery-cont{
-  width:100%;
+.gallery-cont {
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-@media(max-width:768px){
-  .Year2020{
+@media (max-width: 768px) {
+  .Year2020 {
     display: none;
   }
-
-  
-
-  
 }
