--- a/client/src/pages/tirutsavaLegacy/newmobileview/Year2020mobile.css
+++ b/client/src/pages/tirutsavaLegacy/newmobileview/Year2020mobile.css
@@ -1,78 +1,90 @@
-.year-2020-mobile{
-    width:100%;
-    height: 150vh;
-    color: white;
-    background-color: #1e1534;
-    padding: 0;
+.year-2020-mobile {
+  width: 100%;
+  height: 150vh;
+  color: white;
+  background-color: #1e1534;
+  padding: 0;
 }
 
-.mobile-year-head{
-    height: 10%;
-    width:100%;
-    display: flex;
-    justify-content: center;
+.year-2020-mobile.day-mode {
+  background-color: #26e0fc;
 }
 
-.mobile-head-line{
-    width:30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.year-2020-mobile.night-mode {
+  background-color: #1e1534;
 }
 
-.mobile-line-color{
-    width:70%;
-    height: 3px;
-  background-color: rgb(178,34,34);
+.mobile-year-head {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.mobile-head-name{
-    background: linear-gradient(45deg, #f3ec78, #af4261);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-   letter-spacing: 5px;
-    font-size: 35px;
-    font-weight: 700;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.mobile-head-line {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.mobile-year-cont{
-    height:80%;
-    width:100%;
-    margin: auto;
-    position: relative;
-    left: 15px;
+.mobile-line-color {
+  width: 70%;
+  height: 3px;
+  background-color: #df42b1;
 }
 
-.mobile-stats-foot{
-    height:10%;
-    width:100%;
+.mobile-head-name {
+  background: linear-gradient(45deg, #f3ec78, #af4261);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  letter-spacing: 5px;
+  font-size: 35px;
+  font-weight: 700;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.mobile-movie{
-    height: 50%;
-    width:100%;
-    
+.mobile-head-name.day-mode {
+  background: linear-gradient(45deg, #df42b1, #1e1534);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.mobile-gallery-cont{
-    width:100%;
-    height: 100%;
+.mobile-year-cont {
+  height: 80%;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  left: 15px;
 }
 
-.mobile-movie-cont{
-    width:100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.mobile-stats-foot {
+  height: 10%;
+  width: 100%;
 }
 
-.mobile-gallery{
-    height: 50%;
-    width:100%;
-   
+.mobile-movie {
+  height: 50%;
+  width: 100%;
+}
+
+.mobile-gallery-cont {
+  width: 100%;
+  height: 100%;
+}
+
+.mobile-movie-cont {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-gallery {
+  height: 50%;
+  width: 100%;
 }
