--- a/client/src/pages/tirutsavaLegacy/stats.css
+++ b/client/src/pages/tirutsavaLegacy/stats.css
@@ -30,7 +30,6 @@
 }
 
 .events-heading {
-
   font-weight: 700;
   color: white;
   letter-spacing: 3px;
@@ -40,25 +39,34 @@
 }
 
 .events-count {
-  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  background: linear-gradient(to right, #df42b1 0%, #330867 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
   justify-content: center;
   text-align: center;
-font-size: 20px;
+  font-size: 20px;
 }
 
-.heading-mg{
-  margin:0
+.heading-mg {
+  margin: 0;
 }
 
 .events-heading p {
   z-index: 100;
+  letter-spacing: 3px;
+  font-size: 22px;
+}
+
+.events-heading.day-mode p {
+  background: #1e1534;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.events-heading.night-mode p {
   background: linear-gradient(45deg, #f3ec78, #af4261);
   background-clip: text;
   -webkit-text-fill-color: transparent;
- letter-spacing: 3px;
- font-size: 22px;
 }
 
 @media (max-width: 505px) {
@@ -71,7 +79,7 @@ font-size: 20px;
   .events .events-heading p {
     font-size: 18px;
     position: relative;
-    top:20px;
+    top: 20px;
   }
 
   .events-count {
@@ -79,9 +87,9 @@ font-size: 20px;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     position: relative;
-    top:15px;
+    top: 15px;
     justify-content: center;
     text-align: center;
-  font-size: 20px;
+    font-size: 20px;
   }
 }
