--- a/client/src/pages/tirutsavaLegacy/stats.css
+++ b/client/src/pages/tirutsavaLegacy/stats.css
@@ -2,8 +2,22 @@
   width: 100%;
   display: flex;
   height: 100%;
+  position: relative;
+  top:2px;
   justify-content: space-evenly;
+  background-color: #1e1534;
 }
+
+.footer-abouts.day-mode{
+  width: 100%;
+  display: flex;
+  height: 100%;
+  position: relative;
+  top:2px;
+  justify-content: space-evenly;
+  background-color: #26e0fc;
+}
+
 
 .events {
   margin: 0;
@@ -36,15 +50,18 @@
   z-index: 100;
   text-transform: uppercase;
   display: grid;
+  font-family: 'Itim', cursive;
 }
 
 .events-count {
   background: linear-gradient(to right, #df42b1 0%, #330867 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  letter-spacing: 5px;
   justify-content: center;
   text-align: center;
   font-size: 20px;
+  font-family: 'Itim', cursive;
 }
 
 .heading-mg {
@@ -53,33 +70,40 @@
 
 .events-heading p {
   z-index: 100;
-  letter-spacing: 3px;
+  letter-spacing: 5px;
   font-size: 22px;
+  font-family: 'Itim', cursive;
+ 
 }
 
 .events-heading.day-mode p {
-  background: #1e1534;
+  background: linear-gradient(45deg,#1e1534,black,#1e1534,black);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: 'Itim', cursive;
 }
 
 .events-heading.night-mode p {
   background: linear-gradient(45deg, #f3ec78, #af4261);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: 'Itim', cursive;
+  
 }
 
 @media (max-width: 505px) {
   .events .events-heading p {
     font-size: 20px;
+    font-family: 'Itim', cursive;
   }
 }
 
 @media (max-width: 400px) {
   .events .events-heading p {
-    font-size: 18px;
+    font-size: 15px;
     position: relative;
     top: 20px;
+    font-family: 'Itim', cursive;
   }
 
   .events-count {
@@ -90,6 +114,7 @@
     top: 15px;
     justify-content: center;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    font-family: 'Itim', cursive;
   }
 }
