--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -1,5 +1,14 @@
-h1{
-    position: relative;
-    top:100px;
-    z-index: 10000;
+.home-whole{
+    width:100%;
+    height: 90vh;
+    background-color:rgb(30,21,52);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
+
+.Auto-swipe{
+    width:100%;
+}
+
