--- a/client/src/components/Homepage/Games.css
+++ b/client/src/components/Homepage/Games.css
@@ -36,7 +36,7 @@
  
 }
 
-.text{
+.text-game{
     width:fit-content;
     height:100%;
     display: flex;
@@ -44,7 +44,7 @@
     align-items: center;
 }
 
-.cont-text{
+.cont-text-game{
     width:100%;
     height:80%;
     font-size: 11em;
