--- a/client/src/components/Homepage/Music.css
+++ b/client/src/components/Homepage/Music.css
@@ -26,9 +26,7 @@
 .icon-2 img{
     width:100%;
     height: 100%;
-    z-index:10;
-
-    
+    z-index:10;  
 }
 
 .icon-2{
@@ -61,4 +59,255 @@
 
 .cont-text text{
     z-index:20;
+}
+
+.icon1 img {
+  position: absolute;
+  border-radius: 5px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  will-change: transform;
+}
+
+.icon2 img {
+  position: absolute;
+  border-radius: 5px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  will-change: transform;
+}
+
+.music-phone-view{
+    height: 100%;
+    width:100%;
+    display: none;
+}
+
+.music-xs-phone-view{
+    width:100%;
+    height:100%;
+    display: none;
+}
+
+@media(max-width:838px) and (min-width:690px){
+    .cont-text{
+        width:100%;
+        height:80%;
+        font-size: 8em;
+        background: linear-gradient(45deg, #f3ec78, #af4261);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500;
+        z-index: 20;
+    
+    }
+    
+}
+
+@media(max-width:690px){
+    .music-whole{
+        display: none;
+    }
+
+    .music-phone-view{
+        display: block;
+        overflow-y: scroll;
+    }
+
+    .phone-icon-1{
+        width:80%;
+        margin:auto;
+        position: relative;
+        top:50px;
+        height: 500px;
+    }
+
+    .phone-icon-1 img{
+        width:100%;
+        height: 100%;
+        position: relative;
+        bottom:30px;
+        right:3%;
+    }
+
+    .phone-text{
+        width:100%;
+        height:100%;
+    }
+
+    .phone-cont-text{
+        width:fit-content;
+        height:fit-content;
+        margin: auto;
+        font-size: 10em;
+        letter-spacing: 15px;
+        position: relative;
+        bottom:90px;
+        right:3%;
+        background: linear-gradient(45deg, #f3ec78, #af4261);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500;
+        z-index: 20;
+        text-align:center;
+    }
+    
+}
+
+@media(max-width:525px){
+    .music-whole{
+        display: none;
+    }
+
+    .music-phone-view{
+        display: none
+    }
+
+    .music-xs-phone-view{
+        display: block;
+    }
+
+    .xs-phone-icon-1{
+        width:80%;
+        margin:auto;
+        position: relative;
+        top:50px;
+        height: 500px;
+    }
+
+    .xs-phone-icon-1 img{
+        width:100%;
+        height: 100%;
+        position: relative;
+        bottom:30px;
+        right:3%;
+    }
+
+    .xs-phone-text{
+        width:100%;
+        height:100%;
+    }
+
+    .xs-phone-cont-text{
+        width:fit-content;
+        height:fit-content;
+        margin: auto;
+        font-size: 8em;
+        letter-spacing: 15px;
+        position: relative;
+        bottom:90px;
+        background: linear-gradient(45deg, #f3ec78, #af4261);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500;
+        z-index: 20;
+        text-align:center;
+    }
+    
+}
+
+@media(max-width:415px){
+    .music-whole{
+        display: none;
+    }
+
+    .music-phone-view{
+        display: none
+    }
+
+    .music-xs-phone-view{
+        display: block;
+    }
+
+    .xs-phone-icon-1{
+        width:80%;
+        margin:auto;
+        position: relative;
+        top:50px;
+        height: 500px;
+    }
+
+    .xs-phone-icon-1 img{
+        width:100%;
+        height: 100%;
+        position: relative;
+        bottom:30px;
+        right:3%;
+    }
+
+    .xs-phone-text{
+        width:100%;
+        height:100%;
+    }
+
+    .xs-phone-cont-text{
+        width:fit-content;
+        height:fit-content;
+        margin: auto;
+        font-size: 6em;
+        letter-spacing: 15px;
+        position: relative;
+        bottom:65px;
+        background: linear-gradient(45deg, #f3ec78, #af4261);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500;
+        z-index: 20;
+        text-align:center;
+    }
+    
+}
+
+@media(max-width:337px){
+    .music-whole{
+        display: none;
+    }
+
+    .music-phone-view{
+        display: none
+    }
+
+    .music-xs-phone-view{
+        display: block;
+    }
+
+    .xs-phone-icon-1{
+        width:80%;
+        margin:auto;
+        position: relative;
+        top:50px;
+        height: 500px;
+    }
+
+    .xs-phone-icon-1 img{
+        width:100%;
+        height: 100%;
+        position: relative;
+        bottom:30px;
+        right:3%;
+    }
+
+    .xs-phone-text{
+        width:100%;
+        height:100%;
+    }
+
+    .xs-phone-cont-text{
+        width:fit-content;
+        height:fit-content;
+        margin: auto;
+        font-size: 5em;
+        letter-spacing: 15px;
+        position: relative;
+        bottom:65px;
+        background: linear-gradient(45deg, #f3ec78, #af4261);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500;
+        z-index: 20;
+        text-align:center;
+    }
+    
 }
